--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="css/cssHomePage.css">
+    <link rel="stylesheet" type="text/css" href="css/cssIndex.css">
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>  
     <div class="header"><img src="img/logo.png">
     <h3>Faculdade Impacta Tecnologia</h3>
-    </div><br><br><br><br><br>
+    </div><br><br>
     
     <div class="wrapper">
         <ul>
@@ -20,7 +20,7 @@
             <li><a href="Disciplina.html" class="third">Disciplina</a></li>
             <li><a href="ListaDeCursos.html" class="fourth">Lista de Cursos</a></li>
         </ul>
-    </nav>
+    </div>
 
     <h2>Página Inicial</h2>
 
