--- a/Disciplina.html
+++ b/Disciplina.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header"><img src="img/logo.png">
     <h3>Faculdade Impacta Tecnologia</h3>
-    </div><br><br><br><br><br>
+    </div><br><br>
 
     <div class="wrapper">
         <ul>
