--- a/Disciplina.html
+++ b/Disciplina.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="css/cssDisciplina.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
 </head>
 <body>
     <div class="header"><img src="img/logo.png">
     <h3>Faculdade Impacta Tecnologia</h3>
-    </div><br><br>
+    </div><br><br><br>
 
     <div class="wrapper">
         <ul>
